# bevy-ui-string-parser

./: Cargo.toml  README.md
src/: lib.rs
src/parser/: angle.rs  color.rs  mod.rs  rect.rs  val.rs
