[package]
name = "bevy_ui_string_parser"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Parser for various values used in bevy-ui."
readme = "README.md"
repository = "https://github.com/mattzque/bevy-ui-string-parser"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
bevy = { version = "0.12.1" }
nom = "7.1"
lazy_static = "1.4"
serde = { version = "1.0", optional = true }

[dev-dependencies]
test-case = "3.3"
serde_json = { version = "1.0" }

[package.metadata.docs.rs]
all-features = true